feat:Agregar test unitarios y de integracion con JUnit y Mockito. Sincronizar cambios y configurar Sonar/JaCoCo para los microservicios